# UDPChat

./: CMakeLists.txt  README.md  README.txt  test.c  test1.c  udpchat.h
android_arm64/: CMakeCache.txt
android_arm64/jnilibs/: Makefile
arm64build/: Makefile  cmake_install.cmake
arm64build/jnilibs/: cmake_install.cmake
armbuild/lib/: Makefile  cmake_install.cmake
docs/: Makefile  make.bat
docs/source/: API简介.rst  conf.py  index.rst  使用示例.rst  概览.rst
ios_arm64_build/: CMakeCache.txt  cmake_install.cmake
ios_arm64_build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
ios_arm64_build/UDPChat.build/Debug-iphonesimulator/ALL_BUILD.build/: dgph
ios_arm64_build/UDPChat.build/Debug-iphonesimulator/ZERO_CHECK.build/: Script-EB98B85BFCDB48EBB4E54AAC.sh  dgph  dgph~
ios_arm64_build/UDPChat.xcodeproj/: project.pbxproj
ios_arm64_build/lib/CMakeScripts/: UDPChat_postBuildPhase.makeRelWithDebInfo
ios_arm64_build/lib/Debug-iphonesimulator/: libUDPChat.dylib
ios_arm64_build/lib/Release-iphoneos/: libUDPChat.dylib
ios_arm64_build/lib/Release-iphonesimulator/: libUDPChat.dylib
jnilibs/: CMakeLists.txt  Recver_test.c  Sender_test.c  UDPChat.java  cn_edu_scnu_libhttpserver_httpserver_UDPChat.h  cn_edu_scnu_libhttpserver_httpserver_UDPChat_sockInfo.h  sockInfo.java  udpchat.cpp
lib/: CMakeLists.txt  Recver_test.c  Sender_test.c  a.out  b.out  udpchat.c  udpchat.h  udpchat.h.gch
public/: Mysocket.cpp  Mysocket.h  Mysocket的副本.c  text.c  tinyhttp.c  webbench.c
(+28 files in other folders)
